--- a/05.DOM/index.html
+++ b/05.DOM/index.html
@@ -26,6 +26,17 @@
         <li>Repeat</li>
     </ul>
     <button class="clickMe">Click Me</button>
+    <h1>More Events</h1>
+    <p class="copy">You can not copy this</p>
+    <div class="box" style="height: 200px; width: 250px;border: solid;">
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem rerum laborum reprehenderit? Eius qui fugiat sed veritatis delectus inventore, adipisci velit in atque debitis obcaecati ex! Assumenda mollitia fuga tempora.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officiis veritatis, eos in esse fugiat explicabo architecto rerum porro suscipit. Aliquid aut dolore, corporis eveniet doloremque facilis praesentium beatae accusamus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sapiente ex deleniti, iure laboriosam reprehenderit iusto adipisci veritatis modi. Ut quod, officia odit nam iure repellat perspiciatis corrupti neque suscipit?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ducimus accusantium facilis culpa dolorem ipsa suscipit magni voluptatem vitae, velit quas aut fugiat cum hic quis libero fuga, doloribus odio.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores ducimus, eum ex temporibus aut dolor, ea officia quis labore, animi repudiandae earum. Aperiam assumenda accusantium quos rerum? Perspiciatis, iusto suscipit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nesciunt laboriosam quas? Ullam ratione error praesentium quam minima modi est alias sed, magni laudantium, nobis eveniet. Explicabo pariatur unde iusto?</p>
+   
     <script src="script.js"></script>
 </body>
 
